--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header style="width: 200px !important">
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         <p>{{ site.description | default: site.github.project_tagline }}</p>
       </header>
-      <section>
+      <section style="width: 600px !important">
 
       {{ content }}
 
